--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 				<!-- Main -->
 					<div id="main">
+						<iframe src="https://grandtcmhealingacupuncture.simplybook.it/v2/" width="100%" height="600px" frameborder="0"></iframe>
 
 						<!-- Featured Post -->
 							<article class="post featured">
