--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
+
 <html>
 	<head>
 		<title>Massively by HTML5 UP</title>
@@ -11,9 +13,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- <script src="//widget.simplybook.it/v2/widget/widget.js" type="text/javascript"></script> -->
+		<!-- <script src="assets/js/widget.js" type="text/javascript"></script> -->
 	</head>
 	<body class="is-preload">
-
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
@@ -51,6 +54,46 @@
 				<!-- Main -->
 					<div id="main">
 						<iframe src="https://grandtcmhealingacupuncture.simplybook.it/v2/" width="100%" height="600px" frameborder="0"></iframe>
+
+						<div id="sbw_f9xzk8" style="width: 100%; height: 500px;">Test</div>
+
+						<script src="//widget.simplybook.it/v2/widget/widget.js" type="text/javascript"></script>
+						<script type="text/javascript">
+							var widget = new SimplybookWidget({
+								"widget_type": "iframe",
+								"url": "https://grandtcmhealingacupuncture.simplybook.it",
+								"theme": "creative",
+								"theme_settings": {
+									"timeline_show_end_time": "0",
+									"timeline_modern_display": "as_slots",
+									"timeline_hide_unavailable": "1",
+									"index_page_content_grid": "[{\"template\":\"col_25_50_25\",\"items\":[\"timetable\",\"about-us\",\"contacts\"]}]",
+									"hide_past_days": "0",
+									"sb_base_color": "#69b1ca",
+									"display_item_mode": "block",
+									"booking_nav_bg_color": "#69b1ca",
+									"body_bg_color": "#ffffff",
+									"sb_review_image": "",
+									"dark_font_color": "#233c3e",
+									"light_font_color": "#ffffff",
+									"btn_color_1": "#347a81",
+									"hide_img_mode": "1",
+									"show_sidebar": "1",
+									"sb_busy": "#c7b3b3",
+									"sb_available": "#e5f2ff"
+								},
+								"timeline": "modern",
+								"datepicker": "top_calendar",
+								"is_rtl": false,
+								"app_config": {
+									"clear_session": 0,
+									"allow_switch_to_ada": 0,
+									"predefined": []
+								},
+								"container_id": "sbw_f9xzk8"
+							});
+						</script>
+
 
 						<!-- Featured Post -->
 							<article class="post featured">
@@ -161,6 +204,9 @@
 
 					</div>
 
+					<!-- <script type="text/javascript">
+						    var widget = new SimplybookWidget({"widget_type":"iframe","url":"https:\/\/grandtcmhealingacupuncture.simplybook.it","theme":"creative","theme_settings":{"timeline_show_end_time":"0","timeline_modern_display":"as_slots","timeline_hide_unavailable":"1","index_page_content_grid":"[{\"template\":\"col_25_50_25\",\"items\":[\"timetable\",\"about-us\",\"contacts\"]}]","hide_past_days":"0","sb_base_color":"#69b1ca","display_item_mode":"block","booking_nav_bg_color":"#69b1ca","body_bg_color":"#ffffff","sb_review_image":"","dark_font_color":"#233c3e","light_font_color":"#ffffff","btn_color_1":"#347a81","hide_img_mode":"1","show_sidebar":"1","sb_busy":"#c7b3b3","sb_available":"#e5f2ff"},"timeline":"modern","datepicker":"top_calendar","is_rtl":false,"app_config":{"clear_session":0,"allow_switch_to_ada":0,"predefined":[]}});
+					</script> -->
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
