--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- <script src="https://widget.simplybook.me/v2/widget/widget.js"></script> -->
+
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -51,9 +53,28 @@
 
 				<!-- Main -->
 					<div id="main">
-						<div id="sbw_f9xzk8" style="width: 100%; height: 1000px;">Test</div>
 
-						<script src="//widget.simplybook.it/v2/widget/widget.js" type="text/javascript"></script>
+						<div class="actions special">
+							<button id="openBookingBtn" class="button large">BOOKING</button>
+						</div>
+
+
+						<script>
+						  document.getElementById("openBookingBtn").addEventListener("click", function () {
+							window.open(
+							  "https://ningningpainsolution.simplybook.it/v2/#book",
+							  "SimplyBookPopup",
+							  "width=800,height=600,resizable=yes,scrollbars=yes"
+							);
+						  });
+						</script>
+
+					
+						<!-- <iframe src="https://grandtcmhealingacupuncture.simplybook.it/v2/" width="100%" height="600px" frameborder="0"></iframe> -->
+
+						<!-- <div id="sbw_f9xzk8" style="width: 100%; height: 1000px;">Test</div> -->
+
+						<!-- <script src="//widget.simplybook.it/v2/widget/widget.js" type="text/javascript"></script>
 						<script type="text/javascript">
 							var widget = new SimplybookWidget({
 								"widget_type": "iframe",
@@ -88,7 +109,7 @@
 								},
 								"container_id": "sbw_f9xzk8"
 							});
-						</script>
+						</script> -->
 
 
 						<!-- Featured Post -->
