--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Ning Ning Pain Solution</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<!-- <script src="https://widget.simplybook.me/v2/widget/widget.js"></script> -->
-
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -22,8 +20,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
+						<h1>Ning Ning<br />
+							Pain Solution</h1>
 						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
 						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
 						<ul class="actions">
@@ -53,142 +51,98 @@
 
 				<!-- Main -->
 					<div id="main">
-
 						<div class="actions special">
-							<button id="openBookingBtn" class="button large">BOOKING</button>
+							<button class="booking-button button large">BOOKING</button>
 						</div>
 
-
 						<script>
-						  document.getElementById("openBookingBtn").addEventListener("click", function () {
-							window.open(
-							  "https://ningningpainsolution.simplybook.it/v2/#book",
-							  "SimplyBookPopup",
-							  "width=800,height=600,resizable=yes,scrollbars=yes"
-							);
-						  });
-						</script>
-
-					
-						<!-- <iframe src="https://grandtcmhealingacupuncture.simplybook.it/v2/" width="100%" height="600px" frameborder="0"></iframe> -->
-
-						<!-- <div id="sbw_f9xzk8" style="width: 100%; height: 1000px;">Test</div> -->
-
-						<!-- <script src="//widget.simplybook.it/v2/widget/widget.js" type="text/javascript"></script>
-						<script type="text/javascript">
-							var widget = new SimplybookWidget({
-								"widget_type": "iframe",
-								"url": "https://grandtcmhealingacupuncture.simplybook.it",
-								"theme": "creative",
-								"theme_settings": {
-									"timeline_show_end_time": "0",
-									"timeline_modern_display": "as_slots",
-									"timeline_hide_unavailable": "1",
-									"index_page_content_grid": "[{\"template\":\"col_25_50_25\",\"items\":[\"timetable\",\"about-us\",\"contacts\"]}]",
-									"hide_past_days": "0",
-									"sb_base_color": "#69b1ca",
-									"display_item_mode": "block",
-									"booking_nav_bg_color": "#69b1ca",
-									"body_bg_color": "#ffffff",
-									"sb_review_image": "",
-									"dark_font_color": "#233c3e",
-									"light_font_color": "#ffffff",
-									"btn_color_1": "#347a81",
-									"hide_img_mode": "1",
-									"show_sidebar": "1",
-									"sb_busy": "#c7b3b3",
-									"sb_available": "#e5f2ff"
-								},
-								"timeline": "modern",
-								"datepicker": "top_calendar",
-								"is_rtl": false,
-								"app_config": {
-									"clear_session": 0,
-									"allow_switch_to_ada": 0,
-									"predefined": []
-								},
-								"container_id": "sbw_f9xzk8"
+							document.querySelectorAll(".booking-button").forEach(function (btn) {
+							  btn.addEventListener("click", function () {
+								window.open(
+								  "https://ningningpainsolution.simplybook.it/v2/#book",
+								  "SimplyBookPopup",
+								  "width=800,height=600,resizable=yes,scrollbars=yes"
+								);
+							  });
 							});
-						</script> -->
+						</script>
 
 
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
+									<!-- <span class="date">April 25, 2017</span> -->
 									<h2><a href="#">And this is a<br />
 									massive headline</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
+								<a href="#" class="image main"><img src="images/Lily-1.jpg" alt="" /></a>
+								<!-- <ul class="actions special">
+									<div class="actions special">
+										<button id="openBookingBtn" class="button large">BOOKING</button>
+									</div>
 									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+								</ul> -->
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<!-- <span class="date">April 24, 2017</span> -->
+										<h2>Acupuncture</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Acupuncture-2.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<div class="actions special">
+										<button class="booking-button button large">BOOKING</button>
+									</div>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<!-- <span class="date">April 22, 2017</span> -->
+										<h2>Moxibustion</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Moxibustion-1.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<div class="actions special">
+										<button class="booking-button button large">BOOKING</button>
+									</div>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<!-- <span class="date">April 18, 2017</span> -->
+										<h2>Cupping</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Cupping-1.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<div class="actions special">
+										<button class="booking-button button large">BOOKING</button>
+									</div>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<!-- <span class="date">April 14, 2017</span> -->
+										<h2>Stone Scrape Therapy</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/StoneScrapeTherapy-1.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<div class="actions special">
+										<button class="booking-button button large">BOOKING</button>
+									</div>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<!-- <span class="date">April 11, 2017</span> -->
+										<h2>Therapeutic Massage</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/TherapeuticMassage-1.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<div class="actions special">
+										<button class="booking-button button large">BOOKING</button>
+									</div>
 								</article>
 								<article>
 									<header>
@@ -198,9 +152,9 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<div class="actions special">
+										<button class="booking-button button large">BOOKING</button>
+									</div>
 								</article>
 							</section>
 
@@ -209,13 +163,7 @@
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									<!-- <a href="#" class="next">Next</a> -->
 								</div>
 							</footer>
 
@@ -250,8 +198,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>4238 Folsom St<br />
+								San Francisco, CA 94110</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
