--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 											<header class="major">
 											<!-- <span class="date">April 25, 2017</span> -->
 											<h3>Licensed Acupuncturist <br /> Licensed Massage Therapist</h3>
-											<p>Jana Ning is a California-licensed acupuncturist, and massage therapist.  she has 10+ years of message therapy and 2 years of advanced acupuncture experience.
-												Massage therapy is used to treat a variety of conditions by manipulating soft tissues to alleviate pain, reduce stress and improve physical function. It can help with muscle strains, sprains, sports injuries and repetitive stress injuries. It also aids in improving circulation, range of motion and can be beneficial for chronic conditions like arthritis. It is often used as complementary therapy for post-acupuncture treatments</p>
+											<p>Jana Ning is a California-licensed acupuncturist, and massage therapist.  she has 10+ years of message therapy and 2 years of advanced acupuncture experience.</p>
 										</header>
 	
 								<!-- <a href="#" class="image main"><img src="images/Lily-1.jpg" alt="" /></a> -->
