--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 						<h1>Ning Ning<br />
 							Pain Solution</h1>
 						<p>We help you restore and maintain your health and vitality. Our gentle and effective acupuncture treatments are tailored to your specific needs and return your body to its natural state of balance.</p>
+						<p>Call <a href="tel:+14153777624">1 (415) 377-7624</a> to schedule an appointment.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,11 +31,11 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Ning Ning Pain Solution</a>
 					</header>
 
 				<!-- Nav -->
-					<nav id="nav">
+					<!-- <nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">This is Massively</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
@@ -46,7 +47,7 @@
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
-					</nav>
+					</nav> -->
 
 				<!-- Main -->
 					<div id="main">
@@ -131,29 +132,16 @@
 										<button class="booking-button button large">BOOKING</button>
 									</div>
 								</article>
-								<!-- <article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<div class="actions special">
-										<button class="booking-button button large">BOOKING</button>
-									</div>
-								</article> -->
 							</section>
 
 						<!-- Footer -->
-							<footer>
+							<!-- <footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
-									<!-- <a href="#" class="next">Next</a> -->
+									<a href="#" class="next">Next</a>
 								</div>
-							</footer>
-
+							</footer> -->
 					</div>
 
 					<!-- <script type="text/javascript">
@@ -161,7 +149,7 @@
 					</script> -->
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!-- <section>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -181,7 +169,7 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
-						</section>
+						</section> -->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
@@ -190,12 +178,12 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">1 (415) 377-7624</a></p>
 							</section>
-							<section>
+							<!-- <section>
 								<h3>Email</h3>
 								<p><a href="#">info@untitled.tld</a></p>
-							</section>
+							</section> -->
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
