--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 						<h1>Ning Ning<br />
 							Pain Solution</h1>
 						<p>We help you restore and maintain your health and vitality. Our gentle and effective acupuncture treatments are tailored to your specific needs and return your body to its natural state of balance.</p>
-						<p>Call <a href="tel:+14153777624">1 (415) 377-7624</a> to schedule an appointment.</p>
-						<ul class="actions">
+						<h3>Call <a href="tel:+14153777624">1 (415) 377-7624</a> to schedule an appointment.</h3>
+						<!-- <ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
+						</ul> -->
 					</div>
 
 				<!-- Header -->
-					<header id="header">
+					<!-- <header id="header">
 						<a href="index.html" class="logo">Ning Ning Pain Solution</a>
-					</header>
+					</header> -->
 
 				<!-- Nav -->
 					<!-- <nav id="nav">
@@ -51,9 +51,9 @@
 
 				<!-- Main -->
 					<div id="main">
-						<div class="actions special">
+						<!-- <div class="actions special">
 							<button class="booking-button button large">BOOKING</button>
-						</div>
+						</div> -->
 
 						<!-- Featured Post -->
 							<article class="post featured">
