--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 						<h1>Ning Ning<br />
 							Pain Solution</h1>
 						<p>We help you restore and maintain your health and vitality. Our gentle and effective acupuncture treatments are tailored to your specific needs and return your body to its natural state of balance.</p>
-						<h3>Call <a href="tel:+14153777624">1 (415) 377-7624</a> to schedule an appointment.</h3>
 						<!-- <ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul> -->
@@ -57,20 +56,22 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
+								<header class="major">
 								<h2>About Us</h2>
-								<p>Ning Ning Pain Solution has been helping patients in San Francisco for more than 30 years. Our licensed practitioners use centuries-old diagnostic techniques to develop a differential diagnosis, create and implement an individualized treatment plans and use proven healing techniques to address your health problems. We bring deep expertise and vast clinical experience to each personalized session.</p>
+								<p>Ning Ning Pain Solution has been helping patients in San Francisco for more than 15 years. Our licensed practitioners use centuries-old diagnostic techniques to develop a differential diagnosis, create and implement an individualized treatment plans and use proven healing techniques to address your health problems. We bring deep expertise and vast clinical experience to each personalized session.</p>
+								</header>
+								<header class="major">
+									<!-- <span class="date">April 25, 2017</span> -->
+									<h3>Licensed Acupuncturist</h3>
+									<p>Lily Ning is a licensed acupuncturist in California and a nationally certified acupuncturist in the US. She has 45 years of combined professional and academic experience in traditional acupuncture. she excels at treating a variety of conditions, including peri/menopause, digestive issues, insomnia, and menstrual issues. </p>
+								</header>
 								
-										<!-- <header class="major"> -->
-											<!-- <span class="date">April 25, 2017</span> -->
-											<h3>Licensed Acupuncturist</h3>
-											<p>Lily Ning is a licensed acupuncturist in California and a nationally certified acupuncturist in the US. She has 45 years of combined professional and academic experience in traditional acupuncture. she excels at treating a variety of conditions, including peri/menopause, digestive issues, insomnia, and menstrual issues. </p>
-										<!-- </header> -->
-										<!-- <a href="#" class="image main"><img src="images/Lily-1.jpg" alt="" /></a> -->
-											<!-- <header class="major"> -->
-											<!-- <span class="date">April 25, 2017</span> -->
-											<h3>Licensed Acupuncturist <br /> Licensed Massage Therapist</h3>
-											<p>Jana Ning is a California-licensed acupuncturist, and massage therapist.  she has 10+ years of message therapy and 2 years of advanced acupuncture experience.</p>
-										<!-- </header> -->
+								<!-- <a href="#" class="image main"><img src="images/Lily-1.jpg" alt="" /></a> -->
+								<header class="major">
+									<!-- <span class="date">April 25, 2017</span> -->
+									<h3>Licensed Acupuncturist <br /> Licensed Massage Therapist</h3>
+									<p>Jana Ning is a California-licensed acupuncturist, and massage therapist.  she has 10+ years of message therapy and 2 years of advanced acupuncture experience.</p>
+								</header>
 	
 								<!-- <a href="#" class="image main"><img src="images/Lily-1.jpg" alt="" /></a> -->
 							</article>
@@ -133,6 +134,12 @@
 									</div>
 								</article>
 							</section>
+						<!-- <section class="posts"> -->
+							<article class="post featured">
+									<h3>You can also Call <a href="tel:+14153777624">1 (415) 377-7624</a> to schedule an appointment.</h3>
+							</article>
+						<!-- </section> -->
+
 
 						<!-- Footer -->
 							<!-- <footer>
@@ -197,9 +204,11 @@
 					</footer>
 
 				<!-- Copyright -->
+				<!-- <article class="post featured">
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
+				</article> -->
 
 			</div>
 
