--- a/index.html
+++ b/index.html
@@ -91,17 +91,6 @@
 								</article>
 								<article>
 									<header>
-										<!-- <span class="date">April 22, 2017</span> -->
-										<h2>Moxibustion</h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/Moxibustion-1.jpg" alt="" /></a>
-									<p>Moxibustion is a traditional Chinese therapy that involves burning a healing herb (mugwort) near specific acupuncture points to promote circulation and support the body’s natural healing process.</p>
-									<div class="actions special">
-										<button class="booking-button button large">BOOKING</button>
-									</div>
-								</article>
-								<article>
-									<header>
 										<!-- <span class="date">April 18, 2017</span> -->
 										<h2>Cupping</h2>
 									</header>
@@ -113,15 +102,27 @@
 								</article>
 								<article>
 									<header>
-										<!-- <span class="date">April 14, 2017</span> -->
-										<h2>Stone Scrape Therapy</h2>
+										<h2>Gua Sha</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/StoneScrapeTherapy-1.jpg" alt="" /></a>
-									<p>Stone Scrape Therapy, also known as Gua Sha, is a traditional healing technique that involves gently scraping the skin with a smooth stone to improve circulation, release tension, and support detoxification.</p>
+									<a href="#" class="image fit"><img src="images/Guasha-1.jpg" alt="" /></a>
+									<p>Gua sha is an ancient healing practice that dates back to the Ming Dynasty in China. The technique involves applying a massage tool over the skin in strokes or brush-like movements. The scraping movement of the smooth massage tool over the skin stimulates tiny circulation activities in the soft tissue of and just below the skin. This is what helps with circulation.</p>
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
 								</article>
+								<article>
+									<header>
+										<!-- <span class="date">April 22, 2017</span> -->
+										<h2>Moxibustion</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Moxibustion-1.jpg" alt="" /></a>
+									<p>Moxibustion is a traditional Chinese therapy that involves burning a healing herb (mugwort) near specific acupuncture points to promote circulation and support the body’s natural healing process.</p>
+									<div class="actions special">
+										<button class="booking-button button large">BOOKING</button>
+									</div>
+								</article>
+
+
 								<article>
 									<header>
 										<!-- <span class="date">April 11, 2017</span> -->
@@ -129,6 +130,17 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/TherapeuticMassage-1.jpg" alt="" /></a>
 									<p>Our acupressure and tuina massage therapies provide targeted relief for pain, stress, and tension, promoting overall relaxation and well-being.</p>
+									<div class="actions special">
+										<button class="booking-button button large">BOOKING</button>
+									</div>
+								</article>
+								<article>
+									<header>
+										<!-- <span class="date">April 14, 2017</span> -->
+										<h2>Stone Scrape Therapy</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/StoneScrapeTherapy-1.jpg" alt="" /></a>
+									<p>Stone Scrape Therapy, also known as Gua Sha, is a traditional healing technique that involves gently scraping the skin with a smooth stone to improve circulation, release tension, and support detoxification.</p>
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
