--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 						<h1>Ning Ning<br />
 							Pain Solution</h1>
 						<p>We help you restore and maintain your health and vitality. Our gentle and effective acupuncture treatments are tailored to your specific needs and return your body to its natural state of balance.</p>
+						<p>To give back to our community, we’re offering affordable acupuncture and cupping services.</p>
 						<!-- <ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul> -->
