--- a/index.html
+++ b/index.html
@@ -24,30 +24,12 @@
 							Pain Solution</h1>
 						<p>We help you restore and maintain your health and vitality. Our gentle and effective acupuncture treatments are tailored to your specific needs and return your body to its natural state of balance.</p>
 						<p>To give back to our community, we’re offering affordable acupuncture and cupping services.</p>
+						<p>Loaction: 4238 Folsom St, San Francisco, CA 94110.</p>
+
 						<!-- <ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul> -->
 					</div>
-
-				<!-- Header -->
-					<!-- <header id="header">
-						<a href="index.html" class="logo">Ning Ning Pain Solution</a>
-					</header> -->
-
-				<!-- Nav -->
-					<!-- <nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav> -->
 
 				<!-- Main -->
 					<div id="main">
@@ -152,16 +134,6 @@
 									<h3>You can also Call <a href="tel:+14153777624">1 (415) 377-7624</a> to schedule an appointment.</h3>
 							</article>
 						<!-- </section> -->
-
-
-						<!-- Footer -->
-							<!-- <footer>
-								<div class="pagination">
-									<a href="#" class="previous">Prev</a>
-									<a href="#" class="page active">1</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer> -->
 					</div>
 
 					<!-- <script type="text/javascript">
@@ -169,27 +141,6 @@
 					</script> -->
 				<!-- Footer -->
 					<footer id="footer">
-						<!-- <section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section> -->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
@@ -215,13 +166,6 @@
 							</section>
 						</section>
 					</footer>
-
-				<!-- Copyright -->
-				<!-- <article class="post featured">
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
-				</article> -->
 
 			</div>
 
