--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
 									<h3>Licensed Acupuncturist</h3>
 									<p>Lily Ning is a licensed acupuncturist in California and a nationally certified acupuncturist in the US. She has 45 years of combined professional and academic experience in traditional acupuncture. she excels at treating a variety of conditions, including peri/menopause, digestive issues, insomnia, and menstrual issues. </p>
 								</header>
-								
+								<a href="#" class="image fit"><img src="images/Lily-1.jpg" alt="" /></a>
+
 								<!-- <a href="#" class="image main"><img src="images/Lily-1.jpg" alt="" /></a> -->
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h3>Licensed Acupuncturist <br /> Licensed Massage Therapist</h3>
 									<p>Jana Ning is a California-licensed acupuncturist, and massage therapist.  she has 10+ years of message therapy and 2 years of advanced acupuncture experience.</p>
+									<a href="#" class="image fit"><img src="images/Jana-1.jpg" alt="" /></a>
 								</header>
 	
-								<!-- <a href="#" class="image main"><img src="images/Lily-1.jpg" alt="" /></a> -->
 							</article>
 
 						<!-- Posts -->
@@ -88,7 +89,7 @@
 										<h2>Gua Sha</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Guasha-1.jpg" alt="" /></a>
-									<p>Gua sha is an ancient healing practice that dates back to the Ming Dynasty in China. The technique involves applying a massage tool over the skin in strokes or brush-like movements. The scraping movement of the smooth massage tool over the skin stimulates tiny circulation activities in the soft tissue of and just below the skin. This is what helps with circulation.</p>
+									<p>Gua sha is an ancient healing technique that uses a smooth massage tool to stroke the skin in brush-like movements. This scraping action stimulates circulation in the soft tissue just beneath the skin, promoting better blood flow.</p>
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
@@ -117,17 +118,7 @@
 										<button class="booking-button button large">BOOKING</button>
 									</div>
 								</article>
-								<article>
-									<header>
-										<!-- <span class="date">April 14, 2017</span> -->
-										<h2>Stone Scrape Therapy</h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/StoneScrapeTherapy-1.jpg" alt="" /></a>
-									<p>Stone Scrape Therapy, also known as Gua Sha, is a traditional healing technique that involves gently scraping the skin with a smooth stone to improve circulation, release tension, and support detoxification.</p>
-									<div class="actions special">
-										<button class="booking-button button large">BOOKING</button>
-									</div>
-								</article>
+							
 							</section>
 						<!-- <section class="posts"> -->
 							<article class="post featured">
