--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 							<article class="post featured">
 								<header class="major">
 								<h2>About Us</h2>
-								<p>Ning Ning Pain Solution has been helping patients in San Francisco for more than 15 years. Our licensed practitioners use centuries-old diagnostic techniques to develop a differential diagnosis, create and implement an individualized treatment plans and use proven healing techniques to address your health problems. We bring deep expertise and vast clinical experience to each personalized session.</p>
+								<p>Ning Ning Pain Solution has been helping patients in San Francisco for more than 15 years. Our licensed practitioners use centuries-old diagnostic techniques to develop a differential diagnosis, create and implement an individualized treatment plans and use proven healing techniques to address your health problems. We bring deep expertise and vast clinical experience to each personalized session. Ning Ning Pain Solution is operated by Grand TCM Healing Acupuncture Inc., a California-registered healthcare provider.</p>
 								</header>
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h3>Licensed Acupuncturist</h3>
-									<p>Lily Ning is a licensed acupuncturist in California and a nationally certified acupuncturist in the US. She has 45 years of combined professional and academic experience in traditional acupuncture. she excels at treating a variety of conditions, including peri/menopause, digestive issues, insomnia, and menstrual issues. </p>
+									<p>Yangchun Ning is a licensed acupuncturist in California and a nationally certified acupuncturist in the US. She has 45 years of combined professional and academic experience in traditional acupuncture. she excels at treating a variety of conditions, including peri/menopause, digestive issues, insomnia, and menstrual issues. </p>
 								</header>
 								<a href="#" class="image fit"><img src="images/Lily-1.jpg" alt="" /></a>
 
@@ -54,7 +54,7 @@
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h3>Licensed Acupuncturist <br /> Licensed Massage Therapist</h3>
-									<p>Jana Ning is a California-licensed acupuncturist, and massage therapist.  she has 10+ years of message therapy and 2 years of advanced acupuncture experience.</p>
+									<p>Juxiang Ning is a California-licensed acupuncturist, and massage therapist.  she has 10+ years of message therapy and 2 years of advanced acupuncture experience.</p>
 									<a href="#" class="image fit"><img src="images/Jana-1.jpg" alt="" /></a>
 								</header>
 	
@@ -135,8 +135,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>4238 Folsom St<br />
-								San Francisco, CA 94110</p>
+								<p>4238 Folsom St, San Francisco, CA 94110</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -147,6 +146,12 @@
 								<p><a href="#">info@untitled.tld</a></p>
 							</section> -->
 							<section>
+								<h3>About Us</h3>
+								<p>
+									Ningning Pain Solution is operated by Grand TCM Healing Acupuncture Inc., a California-registered healthcare provider.
+								</p>
+							</section>
+							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -155,6 +160,7 @@
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
+	
 						</section>
 					</footer>
 
