--- a/index.html
+++ b/index.html
@@ -127,9 +127,6 @@
 						<!-- </section> -->
 					</div>
 
-					<!-- <script type="text/javascript">
-						    var widget = new SimplybookWidget({"widget_type":"iframe","url":"https:\/\/grandtcmhealingacupuncture.simplybook.it","theme":"creative","theme_settings":{"timeline_show_end_time":"0","timeline_modern_display":"as_slots","timeline_hide_unavailable":"1","index_page_content_grid":"[{\"template\":\"col_25_50_25\",\"items\":[\"timetable\",\"about-us\",\"contacts\"]}]","hide_past_days":"0","sb_base_color":"#69b1ca","display_item_mode":"block","booking_nav_bg_color":"#69b1ca","body_bg_color":"#ffffff","sb_review_image":"","dark_font_color":"#233c3e","light_font_color":"#ffffff","btn_color_1":"#347a81","hide_img_mode":"1","show_sidebar":"1","sb_busy":"#c7b3b3","sb_available":"#e5f2ff"},"timeline":"modern","datepicker":"top_calendar","is_rtl":false,"app_config":{"clear_session":0,"allow_switch_to_ada":0,"predefined":[]}});
-					</script> -->
 				<!-- Footer -->
 					<footer id="footer">
 						<section class="split contact">
@@ -137,18 +134,18 @@
 								<h3>Address</h3>
 								<p>4238 Folsom St, San Francisco, CA 94110</p>
 							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">1 (415) 377-7624</a></p>
-							</section>
 							<!-- <section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<h3>Phone</h3>
+								<p><a href="tel:+14153777624">1 (415) 377-7624</a></p>
 							</section> -->
+							<section>
+								<h3>Email</h3>
+								<p><a href="mailto:contact@ningningpainsolution.com">contact@ningningpainsolution.com</a></p>
+							</section>
 							<section>
 								<h3>About Us</h3>
 								<p>
-									Ningning Pain Solution is operated by Grand TCM Healing Acupuncture Inc., a California-registered healthcare provider.
+									Ning Ning Pain Solution is operated by Grand TCM Healing Acupuncture Inc., a California-registered healthcare provider.
 								</p>
 							</section>
 							<section>
