--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
+									<p>By booking, you agree to receive SMS reminders.</p>
 								</article>
 								<article>
 									<header>
@@ -83,6 +84,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
+									<p>By booking, you agree to receive SMS reminders.</p>
 								</article>
 								<article>
 									<header>
@@ -93,6 +95,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
+									<p>By booking, you agree to receive SMS reminders.</p>
 								</article>
 								<article>
 									<header>
@@ -104,6 +107,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
+									<p>By booking, you agree to receive SMS reminders.</p>
 								</article>
 
 
@@ -117,6 +121,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
+									<p>By booking, you agree to receive SMS reminders.</p>
 								</article>
 							
 							</section>
