--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 							<article class="post featured">
 								<header class="major">
 								<h2>About Us</h2>
-								<p>Ning Ning Pain Solution has been helping patients in San Francisco for more than 15 years. Our licensed practitioners use centuries-old diagnostic techniques to develop a differential diagnosis, create and implement an individualized treatment plans and use proven healing techniques to address your health problems. We bring deep expertise and vast clinical experience to each personalized session. Ning Ning Pain Solution is operated by Grand TCM Healing Acupuncture Inc., a California-registered healthcare provider.</p>
+								<p>Ning Ning Pain Solution has been helping patients in San Francisco for more than 15 years. Our licensed practitioners use centuries-old diagnostic techniques to develop a differential diagnosis, create and implement an individualized treatment plans and use proven healing techniques to address your health problems. We bring deep expertise and vast clinical experience to each personalized session.</p>
 								</header>
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h3>Licensed Acupuncturist</h3>
-									<p>Yangchun Ning is a licensed acupuncturist in California and a nationally certified acupuncturist in the US. She has 45 years of combined professional and academic experience in traditional acupuncture. she excels at treating a variety of conditions, including peri/menopause, digestive issues, insomnia, and menstrual issues. </p>
+									<p>Lily Ning is a licensed acupuncturist in California and a nationally certified acupuncturist in the US. She has 45 years of combined professional and academic experience in traditional acupuncture. she excels at treating a variety of conditions, including peri/menopause, digestive issues, insomnia, and menstrual issues. </p>
 								</header>
 								<a href="#" class="image fit"><img src="images/Lily-1.jpg" alt="" /></a>
 
@@ -54,7 +54,7 @@
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h3>Licensed Acupuncturist <br /> Licensed Massage Therapist</h3>
-									<p>Juxiang Ning is a California-licensed acupuncturist, and massage therapist.  she has 10+ years of message therapy and 2 years of advanced acupuncture experience.</p>
+									<p>Jana Ning is a California-licensed acupuncturist, and massage therapist. She has 10+ years of message therapy and 2 years of advanced acupuncture experience.</p>
 									<a href="#" class="image fit"><img src="images/Jana-1.jpg" alt="" /></a>
 								</header>
 	
@@ -72,7 +72,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
-									<p>By booking, you agree to receive SMS reminders.</p>
+									<!-- <p>By booking, you agree to receive SMS reminders.</p> -->
 								</article>
 								<article>
 									<header>
@@ -84,7 +84,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
-									<p>By booking, you agree to receive SMS reminders.</p>
+									<!-- <p>By booking, you agree to receive SMS reminders.</p> -->
 								</article>
 								<article>
 									<header>
@@ -95,7 +95,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
-									<p>By booking, you agree to receive SMS reminders.</p>
+									<!-- <p>By booking, you agree to receive SMS reminders.</p> -->
 								</article>
 								<article>
 									<header>
@@ -107,7 +107,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
-									<p>By booking, you agree to receive SMS reminders.</p>
+									<!-- <p>By booking, you agree to receive SMS reminders.</p> -->
 								</article>
 
 
@@ -121,7 +121,7 @@
 									<div class="actions special">
 										<button class="booking-button button large">BOOKING</button>
 									</div>
-									<p>By booking, you agree to receive SMS reminders.</p>
+									<!-- <p>By booking, you agree to receive SMS reminders.</p> -->
 								</article>
 							
 							</section>
@@ -147,12 +147,12 @@
 								<h3>Email</h3>
 								<p><a href="mailto:contact@ningningpainsolution.com">contact@ningningpainsolution.com</a></p>
 							</section>
-							<section>
+							<!-- <section>
 								<h3>About Us</h3>
 								<p>
 									Ning Ning Pain Solution is operated by Grand TCM Healing Acupuncture Inc., a California-registered healthcare provider.
 								</p>
-							</section>
+							</section> -->
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
